# event_rgb_data_recording

./: .gitignore  README.md
flycapture_ros2_driver/: CMakeLists.txt  package.xml
flycapture_ros2_driver/config/: flycapture_camera_driver_node.params.yaml
flycapture_ros2_driver/include/flycapture_ros2_driver/: flycapture_camera_driver_core.hpp
flycapture_ros2_driver/launch/: camera_recorder.launch.xml
flycapture_ros2_driver/src/: flycapture_camera_driver_core.cpp  flycapture_camera_driver_node.cpp
metavision_ros2_driver/: CMakeLists.txt  package.xml
metavision_ros2_driver/config/: event_camera_driver_node.params.yaml
metavision_ros2_driver/include/metavision_ros2_driver/: event_camera_driver_core.hpp
metavision_ros2_driver/launch/: event_camera_recorder.launch.xml
metavision_ros2_driver/src/: event_camera_driver_core.cpp  event_camera_driver_node.cpp
recording_launch/: CMakeLists.txt  package.xml
recording_launch/launch/: record.launch.xml
